delete sql file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .DS_Store
+ai_skills/langgraph/5.build_a_customer_support_bot/travel2.backup.sqlite
+ai_skills/langgraph/5.build_a_customer_support_bot/travel2.sqlite
